Bug 428680: Sometimes, the document node is the event target for mousemove events now, patch by Matthew Gregan <kinetik@flim.org>, r=smaug, sr=roc, a=damon